# dealhunter

./: .env.example  .flake8  .gitignore  Dockerfile  RODADA1_NOTAS.md  dev.sh  docker-compose.yml  ml_categories.json  offer_flow_walkthrough.md  prompt-scoring-system-dealflow.md  pyproject.toml  requirements.txt  sonar-project.properties
.claude/: settings.local.json
chrome-extension/: popup.html
prompts/: classifier_user.txt  gender_user.txt  lifestyle_analysis_system.txt  title_system.txt
scripts/: analyze_ofertas.py  reset_databases.py  screenshot_ofertas.py
src/: config.py  image_worker.py  logging_config.py  main.py  prompts_loader.py  runner.py  sender.py  worker.py
src/analyzer/: __init__.py  card_debugger.py  fake_discount_detector.py  score_engine.py
src/api/: admin.py  monitor.py
src/database/: schema.sql  seeds.py  sqlite_fallback.py  storage_manager.py  supabase_client.py  title_examples.py
src/distributor/: affiliate_links.py  message_formatter.py  message_validator.py  sender.py  shlink_client.py  telegram_bot.py  title_generator.py  title_review_bot.py
src/image/: __init__.py  image_storage.py  lifestyle_generator.py  local_filters.py  product_image_selector.py  serper_client.py  vision_evaluator.py
src/monitoring/: alert_bot.py  health_check.py  redis_state.py  state.py
src/scraper/: __init__.py  base_scraper.py  ml_classifier.py  ml_scraper.py  ofertas_do_dia.py  pipeline.py  (+1 more)
src/web/: app.js  (+2 more)
tests/: test_affiliate_link.py  test_formatters.py  test_integration.py  test_score_engine.py  test_scrapers.py  test_scrapers_live.py
(+37 files in other folders)
