[project]
name = "crivo"
version = "0.1.0"
description = "Crivo — Scraping, análise e publicação de ofertas"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
extraPaths = ["."]
